--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,7 @@ theme = "catppuccin_mocha"
 line-number = "relative"
 mouse = true
 cursorline = true 
+bufferline = "multiple"
 
 [editor.cursor-shape]
 insert = "bar"
